ad various feature

--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -21,8 +21,9 @@ page-welcome {
     text-align: center;
   }
   .splash-logo {
+    border-radius: 50%;
     margin: auto;
-    background: url('../assets/img/appicon.png') repeat transparent;
+    background: url('../assets/icon/Icon-83.5@2x.png') repeat transparent;
     background-size: 100%;
     width: 128px;
     height: 128px;
