--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,2 +1,29 @@
 page-login {
+  .splash-logo {
+    border-radius: 50%;
+    margin: auto;
+    background: url('../assets/icon/Icon-83.5@2x.png') repeat transparent;
+    background-size: 100%;
+    width: 128px;
+    height: 128px;
+  }
+
+  .background{
+    background-image: url('../../assets/img/welcome/bg.jpg');
+  }
+
+  .item-md {
+    border-color: rgba(0, 0, 0, 0);
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+  }
+
+  .icon {
+    border-radius: 50%;
+    margin: auto;
+    background: url('../assets/icon/Icon-83.5@2x.png') repeat transparent;
+    background-size: 100%;
+    width: 37px;
+    height: 37px;
+  }
 }
