--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -8,6 +8,12 @@ page-signup {
     color: white;
   }
 
+  .item-ios {
+    border-color: rgba(0, 0, 0, 0);
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+  }
+
   .icon_app {
     border-radius: 50%;
     margin: auto;
@@ -15,15 +21,39 @@ page-signup {
     background-size: 100%;
     width: 37px;
     height: 37px;
+    align-content: flex-end;
+  }
+
+  .text-setting{
+    font-size: 20px;
+    color: white;
+    text-align: center;
+  }
+
+  .my-button {
+    background-color: rgba(0, 0, 0, 0);
+    width: 100%;
+    height: 8%;
+    display: block;
+    margin-bottom: auto;
+    margin-top: auto;
+  }
+
+  .butt {
+    width: 100%;
+    text-align: center;
+    display: inline-block;
+    color: white;
   }
 
   .profile-image-wrapper {
+    padding-top: 30px;
     text-align: center;
     margin: 20px 0;
 
     .profile-image {
-      width: 96px;
-      height: 96px;
+      width: 110px;
+      height: 110px;
       border-radius: 50%;
 
       display: inline-block;
