--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -25,8 +25,8 @@ $background-color:  #fff;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
+  secondary:    #488aff,
+  primary:      #3DD6D0,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
