Fixed html and css finalize

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -16,7 +16,7 @@ page-login {
   }
 
   .background{
-    background-image: url('../../assets/img/welcome/bg.jpg');
+    background-image: url('../assets/img/welcome/bg.jpg');
   }
 
   .item-md {
