--- a/src/pages/found/found.scss
+++ b/src/pages/found/found.scss
@@ -1,7 +1,7 @@
 page-found {
 
   .background{
-    background-image: url('../../assets/img/welcome/bg.jpg');
+    background-image: url('../assets/img/welcome/bg.jpg');
   }
 
   .tab {
