--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -1,6 +1,6 @@
 page-signup {
   .background{
-    background-image: url('../../assets/img/welcome/bg.jpg');
+    background-image: url('../assets/img/welcome/bg.jpg');
   }
   .item-md {
     border-color: rgba(0, 0, 0, 0);
