--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -1,49 +1,4 @@
 page-welcome {
-  //.splash-bg {
-  //  position: relative;
-  //  background: url('../assets/img/splashbg.png') no-repeat transparent;
-  //  background-size: cover;
-  //  height: 45%;
-  //  z-index: 1;
-  //  background-repeat: repeat-x;
-  //  animation: animatedBackground 40s linear infinite;
-  //}
-  //
-  //@keyframes animatedBackground {
-  //  from { background-position: 0 0; }
-  //  to { background-position: 100% 0; }
-  //}
-  //
-  //.splash-info {
-  //  position: relative;
-  //  z-index: 2;
-  //  margin-top: -64px;
-  //  text-align: center;
-  //}
-  //.splash-logo {
-  //  border-radius: 50%;
-  //  margin: auto;
-  //  background: url('../assets/icon/Icon-83.5@2x.png') repeat transparent;
-  //  background-size: 100%;
-  //  width: 128px;
-  //  height: 128px;
-  //}
-  //.splash-intro {
-  //  font-size: 18px;
-  //  font-weight: bold;
-  //  max-width: 80%;
-  //  margin: auto;
-  //}
-  //button.login {
-  //  margin-top: 25px;
-  //  background-color: white;
-  //  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
-  //  color: #333;
-  //
-  //  &.activated {
-  //    background-color: rgb(220, 220, 220);
-  //  }
-  //}
   .slogan-icon {
     border-radius: 50%;
     background: url('../assets/icon/icon_new_3.png') repeat transparent;
@@ -63,21 +18,27 @@ page-welcome {
   .butt {
     z-index: 2;
     width: 100%;
-    text-align: center;
-    display: inline-block;
     color: white;
   }
+
+  .button-card{
+    position: absolute;
+    background-color: rgba(220,220,220,0.35);
+    height:900px ;
+    width: 412px;
+  }
   .my-button {
+    position: absolute;
+    right:    0;
+    bottom:   0;
     background-color: rgba(220,220,220,0.35);
     width: 100%;
-    height: 8%;
+    height: 5%;
     display: block;
-    position: fixed;
-    top: 92%;
-    float: top;
     z-index: 1;
   }
   #slideshow {
+    position: absolute;
     overflow: hidden;
     height: 100%;
     width: 100%;
@@ -86,8 +47,8 @@ page-welcome {
   }
 
   #slide-wrapper {
-    width: 2060px;
-    -webkit-animation: slide 10s ease infinite;
+    width: 2472px;
+    -webkit-animation: slide 25s ease infinite;
   }
 
   .slide {
@@ -98,14 +59,16 @@ page-welcome {
   }
   @-webkit-keyframes slide {
     0% {margin-left: 0px;}
-    20% {margin-left: -412px;}
-    30% {margin-left: -412px;}
-    40% {margin-left: -824px;}
-    50% {margin-left: -824px;}
-    60% {margin-left: -1236px;}
-    70% {margin-left: -1236px;}
-    80% {margin-left: -1648px;}
-    90% {margin-left: -1648px;}
+    9% {margin-left: -412px;}
+    18% {margin-left: -824px;}
+    27% {margin-left: -1236px;}
+    36% {margin-left: -1648px;}
+    45% {margin-left: -2060px;}
+    54% {margin-left: -1648px;}
+    63% {margin-left: -1236px;}
+    72% {margin-left: -824px;}
+    81% {margin-left: -412px;}
+    90% {margin-left: 0px;}
   }
 
 }
