--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -16,27 +16,23 @@ page-welcome {
 
   }
   .butt {
-    z-index: 2;
+    z-index: 1;
     width: 100%;
     color: white;
   }
-
-  .button-card{
-    position: absolute;
-    background-color: rgba(220,220,220,0.35);
-    height:900px ;
-    width: 412px;
-  }
   .my-button {
-    position: absolute;
-    right:    0;
-    bottom:   0;
     background-color: rgba(220,220,220,0.35);
     width: 100%;
-    height: 5%;
-    display: block;
     z-index: 1;
+    position: fixed;
+    bottom: 0;
   }
+
+  .button-card{
+    width: 100%;
+    height: 100%;
+  }
+
   #slideshow {
     position: absolute;
     overflow: hidden;
