--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -39,13 +39,22 @@ page-signup {
     background: url('../assets/icon/icon_email/ic_email.png') repeat transparent;
   }
 
-  .icon-3 {
+  .icon-4 {
     border-radius: 50%;
     margin: auto;
     background-size: 100%;
     width: 48px;
     height: 48px;
     background: url('../assets/icon/icon_lock/ic_lock.png') repeat transparent;
+  }
+
+  .icon-3 {
+    border-radius: 50%;
+    margin: auto;
+    background-size: 100%;
+    width: 48px;
+    height: 48px;
+    background: url('../assets/icon/icon_phone/ic_phone.png') repeat transparent;
   }
 
   .text-setting{
