--- a/src/pages/tutorial/tutorial.scss
+++ b/src/pages/tutorial/tutorial.scss
@@ -1,4 +1,7 @@
 page-tutorial {
+  .swiper-pagination-bullet-active{
+    background-color: #3DD6D0;
+  }
 
   .background{
     background-color: black;
