--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -3,6 +3,10 @@ page-cards {
     background-color: transparent;
   }
 
+  ion-icon{
+    color: white!important;
+  }
+
   .toolbar-title{
     color: white;
     font-size: 20px;
