--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -9,6 +9,9 @@ page-login {
     margin-top: 50px;
   }
 
+  .facebook-button{
+    background-color: #3b5998;
+  }
   .text-setting{
     font-size: 20px;
     color: white;
