--- a/src/pages/found/found.scss
+++ b/src/pages/found/found.scss
@@ -10,9 +10,9 @@ page-found {
     background-color: inherit;
   }
 
-  .item-md{
-    background-color: transparent;
-    color: white;
+  .item-md {
+    background-color: transparent!important;
+    color: white!important;
   }
 
   /* Style the buttons inside the tab */
