--- a/src/pages/found/found.scss
+++ b/src/pages/found/found.scss
@@ -10,7 +10,7 @@ page-found {
     background-color: inherit;
   }
 
-  .item-md {
+  .item{
     background-color: transparent!important;
     color: white!important;
   }
