--- a/src/pages/list-master/list-master.scss
+++ b/src/pages/list-master/list-master.scss
@@ -17,7 +17,7 @@ page-list-master {
     color: white!important;
   }
 
-  .item-md{
+  .item{
     background-image: url('../assets/img/welcome/bg.jpg');
   }
 
